# tl431_shunt

./: .dockerignore  Dockerfile  breadboard_test.md  docker-compose.yml  pyproject.toml  simulate_tl431_shunt.py
